# market_research_multiagent

./: .coverage  .dockerignore  .env.example  .gitignore  DEFINITION_OF_DONE.md  Dockerfile  Makefile  PLAN.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: cd.yml  ci.yml
app/: config.py  main.py
app/agents/: agents.py
app/api/: routes.py
app/core/: crew_engine.py  mock_engine.py  orchestrator.py
app/mcp/: server.py
app/schemas/: report.py
app/tasks/: tasks.py
app/tools/: mock_search.py  search_tool.py
app/utils/: logging.py
tests/: test_agents.py  test_api_analyze.py  test_async.py  test_crew_engine.py  test_health.py  test_mcp.py  test_mock_engine.py  test_schemas.py  test_search_tool.py  test_tasks.py
