[project]
name = "market-research-multiagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=1.6.1",
    "fastapi[standard]>=0.138.0",
    "flake8>=7.3.0",
    "httpx2>=2.4.0",
    "mypy>=2.1.0",
    "pydantic>=2.13.4",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]
