[project]
name = "market-research-multiagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=1.6.1",
    "fastapi[standard]>=0.138.0",
    "flake8>=7.3.0",
    "httpx2>=2.4.0",
    "langfuse>=4.12.0",
    "litellm>=1.89.4",
    "mcp>=1.28.0",
    "mypy>=2.1.0",
    "openlit>=1.42.0",
    "pydantic>=2.13.4",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "tavily-python>=0.7.26",
]
